Fixed what was broken in movies and shows + fixed indicators and arrows in Hero 2, plus edited the tabs to take 100% of the width in small screens.

--- a/src/Components/CardsMovies&shows/CardsMoviesshows.css
+++ b/src/Components/CardsMovies&shows/CardsMoviesshows.css
@@ -46,6 +46,48 @@
     position: relative;
 }
 
+.Tabs-container {
+
+    width: 100%;
+    max-height: 61px;
+    padding: 8px;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid var(--DarkGrayOne);
+    border-radius: 8px;
+    background-color: var(--DeepBlack);
+}
+
+.LActive {
+    width: 50%;
+    padding: 12px 0;
+    color: var(--White);
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 500;
+    background-color: var(--Darkblack);
+    border: none;
+    border-radius: 6px;
+    text-align: center;
+}
+
+.Dis-LActive {
+    width: 50%;
+    padding: 12px 0;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 500;
+    color: var(--Gray);
+    background-color: transparent;
+    border: none;
+    text-align: center;
+}
+
+.displayDiv {
+    display: flex;
+}
+
 @media (max-width:1440px) {
     .moviesNotButton {
         border-radius: 6px;
@@ -75,6 +117,14 @@
         padding: 0;
         gap: 50px;
         border: none;
+    }
+
+    .Tabs-container {
+        display: flex;
+    }
+
+    .displayDiv {
+        display: none;
     }
 }
 
