--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -251,7 +251,12 @@
 
     .to-indicator.active {
         width: 25.3164%;
-    }
+        border-radius: 100px;
+        -webkit-border-radius: 100px;
+        -moz-border-radius: 100px;
+        -ms-border-radius: 100px;
+        -o-border-radius: 100px;
+}
 
     .to-slider-upper-mb {
         margin-bottom: 30px;
